# comment2ass

./: README.md  pyproject.toml  requirements.txt
src/: main.py
src/core/: __init__.py  converter.py  downloader.py  json2xml.py  tasks.py  utils.py  xml2ass.py
src/ui/: __init__.py  common.py
